Better date logging

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!--<label>Progression</label>
       <input name="progression" value='true' type="checkbox"><br>-->
       <label>Due date (optional)</label><br>
-      <input name="dueDate" type="date"><br>
+      <input name="dueDate" type="datetime-local"><br>
       <input type="submit">
     </form><br>
   </div>
